# cmake-cpp-template

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: main.cpp
